fixed display spacing issues

--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@
 
 .displaycointitle {
     color: gold;
+    width: 125px;
     font-size: larger;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     padding-top: 12%;
@@ -78,6 +79,7 @@
 #price-body {
     display: flex;
     flex-wrap: wrap;
+    max-height: 350px;
 }
 
 .bodycontent {
@@ -99,6 +101,7 @@
 .priceinfo {
     font-size: 24px;
     margin-top: 3%;
+    width: 250px;
 }
 
 #pricebody {
